# accessorpp

./: readme.md
doc/: accessor.md  getter.md  setter.md  tutorial.md
include/accessorpp/: accessor.h  getter.h  setter.h
include/accessorpp/internal/: accessor_i.h  typeutil_i.h  util.h
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  b1_accessor.cpp  test.h
tests/tutorial/: CMakeLists.txt  tutorial.h  tutorial_accessor.cpp  tutorial_view_model_binding.cpp  tutorialmain.cpp
tests/unittest/: CMakeLists.txt  test_accessor_basic.cpp  test_accessor_callback.cpp  test_accessor_default_no_getter_setter.cpp  test_accessor_object.cpp  test_accessor_operator_binary.cpp  test_accessor_operator_binary_assignment.cpp  test_accessor_operator_logic.cpp  test_accessor_operator_unary.cpp  test_getter.cpp  test_setter.cpp
tools/: generateops.py
